* Adjust gamma slider range so that the default value is in the middle. (Justin Jacobs)
* Fix incorrect dimensions of SVG icon. (Alexander Wilms)
* Add documentation for creating Mac OS build. (Thomas Leavitt)
* Fix Windows installer not using the correct working directory for launching Flare after install. (Justin Jacobs)

Translation Updates:

* Scottish Gaelic (gd) update (GunChleoc)

Game changes:

* Redesign final Fort Nasu puzzle, in response to the frustrations of many players. (Justin Jacobs)
* Add appdata.xml for use with various package managers. (Alexander Wilms)



Flare v1.0 http://flarerpg.org/index.php/2018/03/12/flare-1-0/

Engine changes:

* Add dependency checking and metadata to mods; remove --game command line flag (Justin Jacobs)
* Engine and mod version checking. Mods can require specific engine & dependency versions. (Justin Jacobs)
* Add --mods command line option. (Justin Jacobs)
* Allow mod files to "append" their contents instead of replacing the target file (Justin Jacobs)
* Print filename & line number when file parsing errors occur (Justin Jacobs)

* Switch to using SDL 2 (Justin Jacobs)
* Refactored rendering system to support alternate backends (Henrik Andersson, Igor Paliychuk, Justin Jacobs)
* Implement automatic frame skipping for slow systems (Justin Jacobs)
* Refactor animation system to support higher framerates (Justin Jacobs)
* Change default maximum framerate to 60 FPS (Justin Jacobs)
* Resizable game window (Justin Jacobs)
* Scaled rendering that always fills the window (Justin Jacobs)
* Add --renderer command line flag (Justin Jacobs)

* Fix engine failing to read fast inputs (Andrew Engelbrect)
* Joystick buttons can be re-mapped (Justin Jacobs)
* Allow mapping of joystick axes (Justin Jacobs)
* Support binding all mouse buttons (Justin Jacobs)

* Log console message to file (Justin Jacobs)
* Warn when trying to run multiple instances of Flare (Justin Jacobs)
* Add --help and --version command line flags (Justin Jacobs)
